--- a/boardgame-frontend/package.json
+++ b/boardgame-frontend/package.json
@@ -16,6 +16,7 @@
     "react-hook-form": "^7.66.1"
   },
   "devDependencies": {
+    "@netlify/plugin-nextjs": "^5.14.7",
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
     "@types/react": "^19",
