--- a/boardgame-frontend/package.json
+++ b/boardgame-frontend/package.json
@@ -13,7 +13,8 @@
     "next-auth": "5.0.0-beta.30",
     "react": "19.2.0",
     "react-dom": "19.2.0",
-    "react-hook-form": "^7.66.1"
+    "react-hook-form": "^7.66.1",
+    "zustand": "^5.0.9"
   },
   "devDependencies": {
     "@netlify/plugin-nextjs": "^5.14.7",
